src/assets/css/beehive-layout.css.scss
$white: #fff;
$transparent-white: rgba(244, 244, 244, 0.8);
$scrollbar-rail-color: #dedede;
$scrollbar-color: #666;
$blockquote-gray: #777;

// The styles should match redactor editor in honeycomb
.essay-content {
  margin: 60px 0px;

  h1 {
    font-size: 36px;
    letter-spacing: 0;
    line-height: 40pt;
  }

  h2 {
    font-size: 30px;
    letter-spacing: 0;
    line-height: 32pt;
  }

  h3 {
    font-size: 24px;
    letter-spacing: 0;
    line-height: 28pt;
  }

  h4 {
    font-size: 18px;
    letter-spacing: 0;
    line-height: 28pt;
  }

  blockquote {
    background: none;
    border: 0;
    box-shadow: none;
    color: $blockquote-gray;
    font-size: 18px;
    font-style: italic;
    letter-spacing: 0;
    line-height: 24pt;
    margin: 0;
    margin-bottom: 15px;
    margin-left: 1.6em;
    padding-left: 0;
  }

  h5 {
    font-size: 16px;
    letter-spacing: 0;
    line-height: 24pt;
  }

  p {
    font-size: 16px;
    letter-spacing: 0;
    line-height: 20pt;
  }

}

.startButton {
  padding: 0 !important;
  position: relative !important;
  > div {
    position: absolute;
    right: 0;
    top: -28px;
  }
  a {

  }
}

.leftNav a {
  height:auto !important;
  line-height: 1.5em !important;
  padding: 10px 24px !important;
}

.hide {
  display: none;
}

.cover {
  background-image:url(http://localhost:3019/images/honeycomb/000/001/000/001/medium/mad.max.showdown.jpg);
}

.temp>div:first-child {
  top: -50%;
  left: -50%;
}

.heightFix > div {
  height: 100%;
}

.collectionscover > div {
  width: 100%;
  height: 100%;
}

.collectionscover div div {
  position: static !important;
}

.coverImage {
  background: url("../images/home.jpg");
  background-size: cover;
  background-position: top;
  width: 100%;
  height: 100%;
}

.coverImage img {
  display: none;
}

.item {
  div {

    img {
      max-width: auto !important;
      //min-width: auto !important;
      height: 100%;
    }
  }
  * {
    white-space: normal;
    line-height: 24px;
    height: 100%;
  }
  .caption {
    height: auto;
    * {
      height: auto;
    }
  }
  .text {
    height:auto;
    * {
      height: auto;
    }
  }
}

.ps-container {
  width: 100%;
}

@keyframes slidein {

  0% {
    margin-left: 100%;
  }

  55% {
    margin-left: -2%;
  }

  100% {
    margin-left: 0;
  }
}


.showcase-slide-in-appear {
  margin-left: 100vw;
}

.showcase-slide-in-appear.showcase-slide-in-appear-active {
  animation-delay: 0.5s;
  animation-duration: 2.0s;
  animation-name: slidein;
}

.showcase-bg footer {
  position: absolute;
}

.showcase-outer {
  position: relative;

  > .ps-scrollbar-x-rail {
    animation-duration: 0.5s;
    animation-name: scrollfadein;
    background-color: $scrollbar-rail-color;
    opacity: 0.7;

    .ps-scrollbar-x {
      background-color: $scrollbar-color;
    }
  }
}

// scroll bars
.ps-container {

  > .ps-scrollbar-x-rail {
    display: block;
    height: 15px;
    margin-bottom: 10px;
    margin-left: 25%;
    margin-right: 25%;
    transition: none;
    width: 50%;

    .ps-scrollbar-x {
      height: 15px;
    }
  }
}

@keyframes scrollfadein {
  0% {
    opacity: 0.1;
  }

  100% {
    opacity: 0.7;
  }
}

.openseadragon-container {
  z-index: 1;
}

/* openseadragon */
.os-toolbar {
  position: absolute !important;
  z-index: 100;

  a {
    color: white;
    margin-right: 8px;

    &:hover {
      text-decoration: none;
      color: white;
    }
  }

  i {
    text-shadow: 1px 1px 1px #000;
  }
}

.pagination {
  span {
    white-space: normal;
  }
}

.facet {
  div div div {
    display: inline-block !important;

  }
  div div div:last-child {
      float: right;
      margin:0 !important;
  }
}

